apps/cloudcart/product-service/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: cloudcart-dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service

          image: roshan033/cloudcart-product-service:build-21

          imagePullPolicy: Always

          ports:
            - containerPort: 5002

          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
